// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application renders active application 1`] = `
<ForwardRef(WithStyles)
  className="makeStyles-root-1"
  elevation={2}
>
  <ForwardRef(WithStyles)
    action={
      <ForwardRef(WithStyles)
        className="makeStyles-expand-2 makeStyles-expandOpen-3"
        onClick={[Function]}
        style={
          Object {
            "display": "inline-flex",
          }
        }
      >
        <UNDEFINED />
      </ForwardRef(WithStyles)>
    }
    subheader={
      <ForwardRef(WithStyles)
        className="makeStyles-typography-5"
        variant="body1"
      >
        Application Status:
         
        <span
          style={
            Object {
              "color": "#000",
            }
          }
        >
          In Progress
        </span>
      </ForwardRef(WithStyles)>
    }
    title={
      <ForwardRef(WithStyles)
        className="makeStyles-typography-5 makeStyles-title-6"
        variant="body1"
      >
        <b>
          Community Alpha, #12
        </b>
      </ForwardRef(WithStyles)>
    }
  />
  <ForwardRef(WithStyles)
    in={true}
  >
    <ForwardRef(WithStyles)
      className="makeStyles-divider-4"
    />
    <ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        className="makeStyles-typography-5"
        variant="body1"
      >
        Move in Date: 
        <span>
          01/01/2020
        </span>
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        className="makeStyles-typography-5"
        variant="body1"
      >
        Lease Term: 
        <span>
          12
        </span>
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        className="makeStyles-typography-5"
        variant="body1"
      >
        Montly Rent: 
        <span>
          $
          1.500
        </span>
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        className="makeStyles-typography-5"
        variant="body1"
      >
        Role: 
        <span>
          Main Applicant
        </span>
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        className="makeStyles-typography-5 makeStyles-applicationId-7"
        variant="caption"
      >
        Application ID: 
        <span>
          1
        </span>
      </ForwardRef(WithStyles)>
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</ForwardRef(WithStyles)>
`;

exports[`Application renders past application 1`] = `
<ForwardRef(WithStyles)
  className="makeStyles-root-1"
  elevation={2}
>
  <ForwardRef(WithStyles)
    action={
      <ForwardRef(WithStyles)
        className="makeStyles-expand-2"
        onClick={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
      >
        <UNDEFINED />
      </ForwardRef(WithStyles)>
    }
    subheader={
      <ForwardRef(WithStyles)
        className="makeStyles-typography-5"
        variant="body1"
      >
        Application Status:
         
        <span
          style={
            Object {
              "color": "#000",
            }
          }
        >
          Completed
        </span>
      </ForwardRef(WithStyles)>
    }
    title={
      <ForwardRef(WithStyles)
        className="makeStyles-typography-5 makeStyles-title-6"
        variant="body1"
      >
        <b>
          Community Alpha, #12
        </b>
      </ForwardRef(WithStyles)>
    }
  />
</ForwardRef(WithStyles)>
`;
